<resources>
    <string name="app_name">Organizer</string>

    <string name="decision_cardview_title">Decisions</string>
    <string name="decision_promt_text">Your Life Question</string>

    <string name="note_cardview_title">Notes</string>

    <string name="reminder_cardview_title">Todos</string>

    <string name="dummy_category_name">Category Name</string>
    <string name="dummy_note_title">Note Title</string>
    <string name="dummy_note_body">Note Text</string>
    <string name="selected_card_delete_description">delete selected items</string>
    <string name="delete">delete</string>
    <string name="todo_add_entry_prompt">Entry</string>

    <string name="apply_button">Apply</string>
    <string name="cancel_button">Cancel</string>
    <string name="todo_settings_title">Settings</string>
    <string name="reset_after">Reset after&#8230;</string>
    <string name="days">days</string>
    <string name="at_time">at</string>
    <string name="weeks">weeks</string>
    <string name="on">on</string>
    <string name="months">months</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="menu_button_checklist_description">toggle cecklist button</string>
    <string name="menu_button_checklist_title">Checklist</string>
    <string name="menu_button_delete_description">delete note button</string>
    <string name="menu_button_delete">Delete</string>
    <string name="menu_button_pin_description">pin note button</string>
    <string name="menu_button_pin">Pin</string>
    <string name="todo_add_btn_description">add entry button</string>
    <string name="detail_todo_add_btn_description">add todo line</string>
    <string name="detail_todo_entry_del_btn_description">delete todo line</string>
    <string name="detail_todo_entry_repeat_btn_description">toggle repeat of this todo line</string>
</resources>