<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_todo_entry_cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="1dp"
        app:cardBackgroundColor="@color/md_theme_light_background"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/detail_todo_entry_del_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                app:iconGravity="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_close_24"
                android:contentDescription="@string/detail_todo_entry_del_btn_description" />

            <EditText
                android:id="@+id/detail_todo_entry_line"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/dummy_note_body"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/detail_todo_entry_checkBox"
                app:layout_constraintStart_toEndOf="@+id/detail_todo_entry_del_btn"
                app:layout_constraintTop_toTopOf="@+id/detail_todo_entry_checkBox" />

            <CheckBox
                android:id="@+id/detail_todo_entry_checkBox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listChoiceIndicatorMultiple"
                android:button="@null"
                app:layout_constraintEnd_toStartOf="@+id/detail_todo_entry_repeat_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/detail_todo_entry_repeat_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/repeat_off"
                android:contentDescription="@string/detail_todo_entry_repeat_btn_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>