<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset_after"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <CheckBox
                android:id="@+id/cb_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/cb_weeks"
                app:layout_constraintStart_toStartOf="@+id/cb_weeks"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_x_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/one"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/cb_days"
                app:layout_constraintEnd_toEndOf="@+id/et_x_weeks"
                app:layout_constraintStart_toStartOf="@+id/et_x_weeks"
                app:layout_constraintTop_toTopOf="@+id/cb_days" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                app:layout_constraintBottom_toBottomOf="@+id/cb_days"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/cb_days" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_time"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/et_on_weeks"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <EditText
                android:id="@+id/et_time_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:enabled="false"
                android:inputType="time"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/zero"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="@+id/et_time_weeks"
                app:layout_constraintStart_toStartOf="@+id/et_time_weeks"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <EditText
                android:id="@+id/et_time_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:enabled="false"
                android:inputType="time"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/zero"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/et_time_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/et_time_months"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <CheckBox
                android:id="@+id/cb_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/cb_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/cb_months"
                app:layout_constraintTop_toBottomOf="@+id/cb_days" />

            <EditText
                android:id="@+id/et_x_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
                android:enabled="false"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/one"
                app:layout_constraintBottom_toBottomOf="@+id/cb_weeks"
                app:layout_constraintEnd_toEndOf="@+id/et_x_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/et_x_months"
                app:layout_constraintTop_toBottomOf="@+id/cb_days" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weeks"
                app:layout_constraintBottom_toBottomOf="@+id/et_x_weeks"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/et_x_days" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <EditText
                android:id="@+id/et_on_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
                android:enabled="false"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/one"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/et_on_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/et_on_months"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_time"
                app:layout_constraintBottom_toBottomOf="@+id/et_on_weeks"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_on_weeks"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/et_on_weeks" />

            <CheckBox
                android:id="@+id/cb_months"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/et_x_months"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_weeks" />

            <EditText
                android:id="@+id/et_x_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ems="2"
                android:enabled="false"
                android:inputType="number"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/one"
                app:layout_constraintBottom_toBottomOf="@+id/cb_months"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cb_months"
                app:layout_constraintTop_toBottomOf="@+id/cb_weeks" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/months"
                app:layout_constraintBottom_toBottomOf="@+id/et_x_months"
                app:layout_constraintEnd_toStartOf="@+id/textView13"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_x_months"
                app:layout_constraintTop_toTopOf="@+id/et_x_months" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/on"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/et_on_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12" />

            <EditText
                android:id="@+id/et_on_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ems="2"
                android:enabled="false"
                android:inputType="number"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/one"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/at_time"
                app:layout_constraintBottom_toBottomOf="@+id/et_on_months"
                app:layout_constraintEnd_toStartOf="@+id/et_time_months"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_on_months"
                app:layout_constraintTop_toTopOf="@+id/et_on_months" />

            <EditText
                android:id="@+id/et_time_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ems="2"
                android:enabled="false"
                android:inputType="number"
                android:importantForAutofill="no"
                android:gravity="center"
                android:hint="@string/one"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>